# learn_rag

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/agents/: code-reviewer.md  executor.md  test-writer.md
app/: config.py  main.py
app/api/: deps.py
app/api/routes/: health.py  query.py
app/core/: embedder.py  llm.py  logging.py  retriever.py  tracing.py
app/db/: connection.py  schema.sql
app/schemas/: query.py
app/services/: query_service.py
client/: Dockerfile  package-lock.json  package.json
client/src/app/: layout.tsx  page.tsx
client/src/components/: ChatInput.tsx  MessageItem.tsx  MessageList.tsx  SourcesList.tsx
client/src/lib/: api.ts
client/src/types/: api.ts
eval/: golden_dataset.json  judge.py  run_eval.py
ingestion/: chunker.py  fetcher.py  pipeline.py
tests/: conftest.py  test_chunker.py  test_embedder.py  test_health_route.py  test_judge.py  test_logging.py  test_main.py  test_query_service.py  test_retriever.py  test_routes.py
