[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn_rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.6",
    "sentence-transformers>=3.3.0",
    "anthropic>=0.40.0",
    "langfuse>=2.50.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.9.0",
    "pre-commit>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "ingestion", "eval"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint.isort]
known-first-party = ["app", "eval", "ingestion"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "W292"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
